crates/talkbank-parser-tests/tests/snapshots/offset_tests__error_offset_in_main_tier@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
assertion_line: 226
expression: "(main, error_vec)"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 405,
                                    end: 407,
                                },
                                word_id: None,
                                raw_text: "xx",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "xx",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                lang: None,
                                part_of_speech: None,
                                inline_bullet: None,
                                cached_cleaned_text: CachedStr(
                                    OnceLock(
                                        <uninit>,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period {
                        span: Span {
                            start: 408,
                            end: 409,
                        },
                    },
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 404,
                        end: 410,
                    },
                ),
                language_code_span: None,
            },
            span: Span {
                start: 399,
                end: 410,
            },
            speaker_span: Span {
                start: 400,
                end: 403,
            },
            separator: TierSeparator {
                trailing_space: None,
            },
        },
    ),
    [],
)
